--- a/CarInsurance/CarInsurance/Views/Home/About.cshtml
+++ b/CarInsurance/CarInsurance/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+
+<p>We are a Portland-based car insurance company offering great coverage at competitve rates!</p>
