--- a/CarInsurance/CarInsurance/Views/Home/Contact.cshtml
+++ b/CarInsurance/CarInsurance/Views/Home/Contact.cshtml
@@ -1,17 +1,14 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
+﻿
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    10 Dealership Way<br />
+    Portland, OR 97210<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    503.555.1111
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@bestinsurance.com">Support@bestinsurance.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@bestinsurance.com">Marketing@bestinsurance.com</a>
 </address>
